Fix header/content spacing again.

--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -62,7 +62,7 @@ span.letter-space{
 
 
 .content {
-	margin-top: 90px;
+	margin-top: 80px;
 }
 .undecorated-link:hover {
 	text-decoration: none;
